--- a/principal.html
+++ b/principal.html
@@ -4,18 +4,16 @@
 </head>
 <body>
 <div>
-  <table width="200" border="1" cellpadding="0" cellspacing="0">
-<tr>
-<td colspan="2"><div align="center">Título</div></td>
-</tr>
-<tr>
-<td rowspan="2">&nbsp;</td>
-<td>&nbsp;</td>
-</tr>
-<tr>
-<td width="50%">&nbsp;</td>
-</tr>
-</table>
+  <select name="lista">
+  <optgroup label="Caso 1">
+  <option>Mayo</option>
+  <option>Junio</option>
+  </optgroup>
+  <optgroup label="Caso 2">
+  <option>Mayo</option>
+  <option>Junio</option>
+  </optgroup>
+  </select>
 </div>
 </body>
 </html>
